MyProject/force-app/main/default/objects/Solar_Installation__c/Solar_Installation__c.object-meta.xml
<CustomObject>
    <label>Solar Installation</label>
    <nameField>
        <label>Solar Installation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solar Installations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>