MyProject/force-app/main/default/objects/Solar_Installation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Client Account.</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solar Installations</relationshipLabel>
    <relationshipName>Solar_Installations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>