MyProject/force-app/main/default/objects/Solar_Installation__c/fields/Asset_Tag_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_Tag_ID__c</fullName>
    <externalId>true</externalId>
    <label>Asset Tag ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>