MyProject/force-app/main/default/objects/Solar_Installation__c/fields/Average_Fleet_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Average_Fleet_Efficiency__c</fullName>
    <formula>IF(Total_Expected_Output_KWH__c &gt; 0, 
   Total_Power_Generated_KWH__c / Total_Expected_Output_KWH__c, 
   0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Fleet Efficiency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>