MyProject/force-app/main/default/objects/Solar_Installation__c/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <formula>IF(Average_Fleet_Efficiency__c &gt;= 0.85, 
   IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Healthy&quot;, 20, 20),
   IF(Average_Fleet_Efficiency__c &gt;= 0.70, 
      IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Warning&quot;, 20, 20),
      IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Critical&quot;, 20, 20)
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Status</label>
    <type>Text</type>
</CustomField>