MyProject/force-app/main/default/objects/Solar_Installation__c/fields/Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Installation_Status__c</fullName>
    <label>Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning,</fullName>
                <default>true</default>
                <label>Planning,</label>
            </value>
            <value>
                <fullName>In Progress,</fullName>
            </value>
            <value>
                <fullName>Active,</fullName>
            </value>
            <value>
                <fullName>Under Maintenance,</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>