MyProject/force-app/main/default/objects/Solar_Installation__c/fields/Total_Capacity_KW__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity_KW__c</fullName>
    <label>Total Capacity KW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>