MyProject/force-app/main/default/objects/Solar_Installation__c/fields/Total_Power_Generated_KWH__c.field-meta.xml
<CustomField>
    <fullName>Total_Power_Generated_KWH__c</fullName>
    <label>Total Power Generated KWH</label>
    <summarizedField>Energy_Readout__c.Power_Generated_KWH__c</summarizedField>
    <summaryForeignKey>Energy_Readout__c.Parent_Installation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>