MyProject/force-app/main/default/objects/Solar_Installation__c/validationRules/Enforce_Active_Installation_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Active_Installation_Requirements</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Installation_Status__c, &quot;Active&quot;),
    OR(
        ISBLANK(Commission_Date__c),
        Total_Capacity_KW__c &lt;= 0
    )
)</errorConditionFormula>
    <errorMessage>You cannot activate an installation without a valid Commission Date and a Total Capacity greater than 0.</errorMessage>
</ValidationRule>